--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -1,20 +1,20 @@
 <!-- Items Completed -->
-<!-- custom background image of hospital -->
-<!-- an ordered and unorderd list with numbers and bullets included -->
-<!-- contact information found in footer -->
-<!-- 2 embeded videos that play on page included -->
-<!-- Overwrote font, color, alignment of main content, my name as the title, and the main content respectively using my own stylesheet-->
-<!-- custom title on browser tab -->
-<!-- included linkedin external link at bottom of page -->
-<!-- Navigation links work properly to all pages -->
-<!-- No broken images, media, or other linked content -->
+<!-- line 53 custom background image-->
+<!-- line 78-121 an ordered and unorderd list with numbers and bullets included -->
+<!-- line 142-144 contact information found in footer -->
+<!-- line 130,132 at least 1 embeded videos that plays on page -->
+<!-- line 70 Overwrite font, color, alignment of main content-->
+<!-- line 22 custom title on browser tab -->
+<!-- line 145 at least 1 external link -->
+<!-- line 44-47 Navigation links work properly to all pages -->
+<!-- line 103,132 No broken images, media, or other linked content -->
 <!-- no aesthetic errors -->
-
+<!-- line 17 Comment inside of head section-->
 
 <!DOCTYPE html>
 <html lang="en">
     <head>
-         <!--GARRETT CAMPBELL comment inside of head section-->
+         <!--GARRETT CAMPBELL 4/15 -->
          <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -27,8 +27,8 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+        <link href="../styles/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
     </head>
     <body>
         <!-- Navigation-->
@@ -50,13 +50,13 @@
             </div>
         </nav>
         <!-- Page Header--> 
-        <header class="masthead" title="Image of honor health hospital" style="background-image: url('../assets/images/Honorhealth.png')">
+        <header class="masthead" title="Image of honor health hospital" style="background-image: url('../images/Honorhealth.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
-                            <h1 class="titletext textstyle ">About Me</h1>  
-                            <span class="subheading titletext textstyle ">Here's what I've done.</span>
+                            <h1>About Me</h1>  
+                            <span class="subheading">Here's what I've done.</span>
                         </div>
                     </div>
                 </div>
@@ -67,11 +67,14 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
+                        <span class="bold textsize alignment textcolor diffont" >Resume</span> <br> <br>
                         <a href="#edu" class="underline" >Education</a> |
                         <a href="#exp" class="underline" >Experience</a> |
                         <a href="#per" class="underline" >Personal</a> |
                         <a href="#pro" class="underline" >Projects</a>
+                        
                         <p>I've learned valuable lessons duing my undergrad and graduate programs, however I find that I learn at accelerated paces in practice.</p>
+                       
                         <OL>
                             <p id="edu" class="bold underline alignment">EDUCATION</p>
                             <li> Brigham Young University, Provo, Utah <br> September 2021 - Present
