--- a/html/expertise.html
+++ b/html/expertise.html
@@ -1,9 +1,13 @@
 <!-- Items Completed -->
-
+<!-- include projected career path -->
+<!-- include individual experience in this field -->
+<!-- include anticipated contributions to this field -->
+<!-- Relevant media su videos -->
+<!-- line 10  Comment inside of head section-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-         <!--GARRETT CAMPBELL comment inside of head section-->
+         <!--GARRETT CAMPBELL 4/15-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
@@ -16,8 +20,9 @@
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../css/styles.css" rel="stylesheet" />
-        <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+        <link href="../styles/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
+        
     </head>
     <body>
         <!-- Navigation-->
@@ -39,7 +44,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" title="image procore program screen" style="background-image: url('../assets/images/expertise.png')">
+        <header class="masthead" title="image procore program screen" style="background-image: url('../images/expertise.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -56,9 +61,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>With an enphasis in finance, I have gained a great deal of exposure to financial modeling. This modeling inculdes Pro formas, risk analysis and indepth understanding of financial indicators</p>
-                        <p>Specifically I have a strong foundation in real estate finance. Real Estate Development is an industry that I have a great deal of interest in, I am able to leverage my ability in financial modeling to support my reccomendations regarding potential development projects.</p>
-                        <p>I have a large amount of project managment experience, this in tandom with my financial modeling experience will prove to be extremely beneficial in my persuit of a career in RE Development.</p>
+                        <p><span class="bold underline">Projected career path</span> - My anticipated career will be as a real estate acquisitions analyst for multifamily development company. This is an unfamiliar career path for many, so I have included a video below explaining in depth the role analysts have in the real estate world.</p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UcMYCHyrWko" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p><span class="bold underline">Experince to date</span> - I have had the oportunity to do an internship with Surge Development Group. During which I handled participated in completing due diligence research to inform my financial models. The information included in the proformas gives us great insight on the deal and wheter or not it is a good decision.</p>
+                        <p><span class="bold underline">Expected contributions</span> - With the skill set which I have developed in Finance, I expect to help the company grow by making clear investment decisions.</p>
                     </div>
                 </div>
             </div>
