--- a/html/tableau.html
+++ b/html/tableau.html
@@ -1,37 +1,43 @@
 <!-- Items Completed -->
-<!-- custom background image of hospital -->
-<!-- an ordered and unorderd list with numbers and bullets included -->
-<!-- contact information found in footer -->
-<!-- 2 embeded videos that play on page included -->
-<!-- Overwrote font, color, alignment of main content, my name as the title, and the main content respectively using my own stylesheet-->
-<!-- custom title on browser tab -->
-<!-- included linkedin external link at bottom of page -->
-<!-- Navigation links work properly to all pages -->
-<!-- No broken images, media, or other linked content -->
-<!-- no aesthetic errors -->
+<!-- line 27,37,44 at least three divs that are positiond using div styles -->
+<!-- line 23 custom title on browser tab -->
+<!-- line 26 custom background-->
+<!-- see bootstyles.css Create a stylesheet from scratch for all of the custom and customized styles used on this page-->
+<!-- line 24 Link to custom stylesheet correctly – and do not link to any bootstrap stylesheets-->
+<!-- line 39 Two custom styles beyond div styles-->
+<!-- line 45 How are profits faring in the 50 states of the United States?-->
+<!-- line 47 Pick a state that has high profits. Describe how the state is faring by profit.-->
+<!-- line 49 How are profits within that state doing for each product category?-->
+<!-- line 51 For the most profitable product category in that state, what do we forecast in terms of quantity of sales-->
+<!-- line 46,48,50,52 All graphs should be captioned (using html – not Tableau) to tell a story-->
+<!-- line 55 At least one external link (to outside your site)-->
+<!-- line 27,44 Properly functioning div positioning and layout-->
+<!-- line 29-34 Navigation links work properly (includes links to page 1 and page 2)-->
+<!-- No broken images, media, or other linked (href and src) content-->
+<!-- No clear aesthetic errors (e.g., animated gif backgrounds are horrific)-->
+<!-- line 22 Comment inside of head section-->
 <!DOCTYPE html>
 <html>
     <head>
-        <!--GARRETT CAMPBELL comment inside of head section-->
+        <!--GARRETT CAMPBELL 4/15-->
         <title>Garrett Campbell - Tableau Dashboard</title>
-        <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
+        <link rel="stylesheet" href="../styles/bootstyles.css" type="text/css">
     </head>
-    <body class="tabbg">
-        <div head> 
-            <div class="titletext">
+    <body title="image of 3 dimensional datapoints" class="tabbg mybody">
+        <div class = "header"> 
+            <div class="namenav">
                     <a  href="../index.html">Garrett Campbell</a>
-                <div class="textright ">
-                    <a  href="../index.html" class="topright">Home</a>
-                    <a  href="aboutme.html">About Me</a>
-                    <a  href="expertise.html">Expertise</a>
-                    <a  href="#">Tableau</a>
+                <div class="navbuttons">
+                    <a  href="../index.html"> Home </a>&nbsp;&nbsp;
+                    <a  href="aboutme.html"> About Me </a>&nbsp;&nbsp;
+                    <a  href="expertise.html"> Expertise </a>&nbsp;&nbsp;
+                    <a  href="#"> Tableau </a>
                 </div>
             </div>
-                <header >
-                    <div class="pagetitle">
-                        <h1 class="blacktext textstyle" >Tableau Dashboards</h1>
-                    </div>
-                </header>
+             <div class="header">          
+                <div class="pagetitle">
+                    <h1 class="blacktext textstyle" >Tableau Dashboards</h1>
+                </div>               
             </div> 
         </div>
             <p><h3 class="alignment">Below are interacteive Tableau dashboards </h3></p>
@@ -46,7 +52,7 @@
             <h3>This shows projected profit for the category of office supplies in the state of California</h3><br><br><br>
         </div>
         <div footer class="alignment" >
-            See my <a href="https://www.linkedin.com/in/garrettjcampbell/" target="blank" >Linkedin</a><br><br><br>
+            See my <a class="blacktext underline"  href="https://www.linkedin.com/in/garrettjcampbell/" target="blank" >Linkedin</a><br><br><br>
             <div class="alignment">Copyright &copy; Garrett Campbell 2022</div>
         </div>
     </body>
